Finalizando a parte de agendamento de consultas

--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/static/css/style.css
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/static/css/style.css
@@ -16,6 +16,11 @@
     display: flex;
 }
 
+.form-lista-agendamento-botao {
+    display: flex;
+    justify-content: center;
+}
+
 .descricao {
     font-weight: bold;
     margin-right: 5px;
