--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista-exames-paciente.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/agendamento/lista-exames-paciente.html
@@ -14,8 +14,35 @@
     <div class="alert alert-danger" th:if="${erro}" th:text="${erro}"></div>
 
     <div class="card">
+        <div th:each="agendamento : ${agendamentos}">
+            <div class="rounded-box">
+                <div class="texto-card">
+                    <div class="form-lista-agendamento">
+                        <span class="descricao">Data Consulta:</span>
+                        <span th:text="${agendamento.dataConsulta}" ></span>
+                    </div>
+                    <div class="form-lista-agendamento">
+                        <span class="descricao">Status Agendamento:</span>
+                        <span th:if="${agendamento.statusAgendamentoPaciente eq 'AGUARDANDO_CONFIRMACAO_AGENDAMENTO'}" class="errado">&#10007;</span>
+                        <span th:if="${agendamento.statusAgendamentoPaciente eq 'PACIENTE_PRESENTE'}" class="certo">&#x2714;</span>
+                    </div>
+                    <div class="form-lista-agendamento">
+                        <span class="descricao">Horário:</span>
+                        <span th:text="${agendamento.horario.horaMinuto}"></span>
+                    </div>
+                    <div class="form-lista-agendamento">
+                        <span class="descricao">Exame:</span>
+                        <span th:text="${agendamento.exame.titulo}"></span>
+                    </div>
+                    <div class="form-lista-agendamento-botao">
+                        <a th:href="@{/agendamentos/exame/excluir(idAgendamento=${agendamento.id})}" class="btn btn-danger"  onclick="return confirm('Você deseja realmente cancelar este Agendamento?')">Cancelar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <a href="/agendamentos/exame/agendar" class="btn btn-primary">Novo Exame</a>
     </div>
+
 </div>
 
 </body>
