--- a/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/medico/lista.html
+++ b/TCC-EngenhariaComputacao-Principal/src/main/resources/templates/medico/lista.html
@@ -32,9 +32,9 @@
                 <thead>
                 <tr>
                     <th>Nome</th>
-                    <th>crm</th>
+                    <th>CRM</th>
                     <th>Especialidade</th>
-                    <th>Detalhes</th>
+                    <th>Opções</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -43,7 +43,6 @@
                     <td th:text="${medico.crm}"></td>
                     <td th:text="${medico.especialidade.titulo}"></td>
                     <td>
-                        <a th:href="@{/medico/detalhes(idMedico=${medico.id})}" class="btn btn-outline-secondary">Detalhes</a>
                         <a th:href="@{/medico/editar(idMedico=${medico.id})}" class="btn btn-outline-warning" >Editar</a>
                         <a th:href="@{/medico/excluir(idMedico=${medico.id})}" class="btn btn-outline-danger"  onclick="return confirm('Você deseja realmente excluir este Medico?')">Excluir</a>
                     </td>
