--- a/TCC-EngenhariaComputacao-Totem/src/static/css/style.css
+++ b/TCC-EngenhariaComputacao-Totem/src/static/css/style.css
@@ -1,50 +1,28 @@
-body{
-    background-image: url('../images/Tela-fundo.avif');
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    padding-top: 250px;
+body {
+  background-image: url("../images/Tela-fundo.avif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 250px;
+}
 
+form {
+  padding: 5%;
+}
+
+h1 {
+  color: aliceblue;
+  font-size: 70px;
 }
 
 .footer {
-  margin-top: 410px;
+  margin-top: 10%;
   padding: 30px;
-  color: white;
-  display: flex;
-  font-size: large;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.footer-cpf {
-  margin-top: 350px;
-  padding: 20px;
-  color: white;
-  display: flex;
-  font-size: large;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.footer-senha {
-  margin-top: 350px;
-  padding: 20px;
-  color: white;
-  display: flex;
-  font-size: large;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.footer-reconhecimento {
-  margin-top: 150px;
-  padding: 20px;
   color: white;
   display: flex;
   font-size: large;
@@ -61,95 +39,133 @@ body{
   min-height: 100vh;
 }
 
-form{
-    display: flex;
+form {
+  display: flex;
 }
 
 .flashes-reconhecido {
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    top: 100px;
-    transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: green;
-    padding: 30px;
-    border-radius: 8px;
-    font-size: 24px;
-    font-weight: 700;
-    list-style-type: none;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 100px;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: green;
+  padding: 30px;
+  border-radius: 8px;
+  font-size: 24px;
+  font-weight: 700;
+  list-style-type: none;
 }
 
-.container {
-    position: relative;
-    width: 1000px;
-    height: 100px;
-    margin: 0 auto;
-}
+/* .container {
+  position: relative;
+  width: 1000px;
+  height: 100px;
+  margin: 0 auto;
+} */
 
 .text-box {
-    position: absolute;
-    bottom: 1px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    padding: 20px;
-    font-size: 24px;
-    border-radius: 8px;
-    text-align: center;
+  bottom: 1px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 20px;
+  font-size: 24px;
+  border-radius: 8px;
+  text-align: center;
+  justify-content: center;
 }
 
 .waiting-message {
-    color: white;
+  color: white;
 }
 
 .container-message {
-    position: relative;
-    width: 1100px;
-    height: auto;
-    margin: 0 auto;
+  position: relative;
+  width: 1100px;
+  height: auto;
+  margin: 0 auto;
 }
 
 .message-box {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translate(-50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: red;
-    padding: 20px;
-    border-radius: 8px;
-    text-align: center;
-    font-size: 24px;
-    font-weight: 700;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translate(-50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: red;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
 }
 
 .message {
-    list-style: none;
-    padding: 10px;
-    border: 1px;
-    border-radius: 5px;
+  list-style: none;
+  padding: 10px;
+  border: 1px;
+  border-radius: 5px;
 }
 
 #voltar {
-    margin-left: 3px;
+  margin-left: 3px;
 }
 
 #buscar {
-    margin-left: 3px;
+  margin-left: 3px;
 }
 
 .message li {
-    color: white;
+  color: white;
 }
 
-.message li.yellow{
-    color: yellow;
+.message li.yellow {
+  color: yellow;
 }
 
 .message li.red {
-    color: red;
+  color: red;
 }
 
+.btn {
+  width: 300px;
+  font-size: 36px;
+  padding: 20px 40px;
+  margin: 10px;
+  border-radius: 15px;
+}
 
+.notification-box {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  padding: 15px;
+  border-radius: 8px;
+  display: none;
+}
+
+.notification-content {
+  text-align: left;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.5rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  margin-right: 10px;
+}
