--- a/TCC-EngenhariaComputacao-Totem/src/templates/reconhecimento.html
+++ b/TCC-EngenhariaComputacao-Totem/src/templates/reconhecimento.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,34 +10,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Totem</title>
 </head>
+
 <body>
-{% with messages = get_flashed_messages() %}
-            {% if messages %}
-                <ul class="flashes-reconhecido">
-                    {% for message in messages %}
-                        <li>{{ message }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
-        {% endwith %}
-<img src="{{ url_for('video') }}" width="640" height="480">
-<script>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul class="flashes-reconhecido">
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+    <img src="{{ url_for('video') }}" width="640" height="480">
+    <script>
         // Função para redirecionar para a home após 10 segundos
         function redirectToHome() {
             window.location.href = "/";
         }
 
         // Chamar a função quando a página terminar de carregar
-        document.addEventListener("DOMContentLoaded", function() {
+        document.addEventListener("DOMContentLoaded", function () {
             // Redirecionar após 10 segundos
             setTimeout(redirectToHome, 10000);  // 10000 milissegundos = 10 segundos
         });
     </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-<footer class="footer-reconhecimento">
+<footer class="footer">
     <div class="texto-rodape">
         <p>© Copyright, AGP LAB</p>
     </div>
 </footer>
+
 </html>
